# actix-web-sea-orm-postgres-docker-template

./: .dockerignore  .env.example  .env.example.template  .gitignore  Cargo.toml  Dockerfile  README.md
entity/: Cargo.toml
entity/src/: prelude.rs  todo.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_todo_table.rs
script/: init-db.sh
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  startup.rs  telemetry.rs
src/modules/: mod.rs
src/modules/health_check/: controller.rs
src/modules/todo/: controller.rs  mod.rs  service.rs
src/modules/todo/dtos/: create_todo_dto.rs  mod.rs  update_todo_dto.rs
src/shared/: errors.rs  mod.rs  responses.rs
tests/: e2e.rs
