[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[lib]
path = "src/lib.rs"
name = "lib"

[[bin]]
path = "src/main.rs"
name = "bin"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-appender = "0.2.2"
derive_more = "0.99.17"
chrono = "0.4.19"
validator = { version = "0.16", features = ["derive"] }

entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
version = "0.9.2" 
default-features = true
features = ["mock", "default", "with-json", "macros", "sqlx-postgres", "runtime-actix-rustls", "chrono"]


[dev-dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11.11", features = ["json"] }
once_cell = "1.13.1"
uuid = { version = "1.1.2", features = ["v4"] }
serde_json = "1.0.72"

[dev-dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "postgres",
]